# OpenCLTestGTest

./: CMakeLists.txt  LICENSE  README.md
include/: cl_test_base.hpp
kernel/: simple_add.cl
src/: buffer_tests.cpp  kernel_tests.cpp
